cf-blog-k8s-baremetal.yaml
# CF-Blog on Kubernetes with Baremetal
# NestJS Backend Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cf-blog-backend
  namespace: cf-blog
spec:
  replicas: 3
  selector:
    matchLabels:
      app: cf-blog-backend
  template:
    metadata:
      labels:
        app: cf-blog-backend
    spec:
      containers:
        - name: cf-blog-backend
          image: gsmx64/cf-blog-backend:latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 82
          livenessProbe:
            httpGet:
              path: /api/settings/view
              port: 82
            initialDelaySeconds: 60
            timeoutSeconds: 5

# React Frontend Deployment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cf-blog-frontend
  namespace: cf-blog
spec:
  replicas: 3
  selector:
    matchLabels:
      app: cf-blog-frontend
  template:
    metadata:
      labels:
        app: cf-blog-frontend
    spec:
      containers:
        - name: cf-blog-frontend
          image: gsmx64/cf-blog-frontend:latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 81
          livenessProbe:
            httpGet:
              path: /
              port: 81
            initialDelaySeconds: 60
            timeoutSeconds: 5

# APP Backend Service - NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: cf-blog-backend-service
  namespace: cf-blog
spec:
  selector:
    app: cf-blog-backend
  type: NodePort
  ports:
    - name: "http"
      port: 82
      targetPort: 82
      protocol: "TCP"
      nodePort: 30007

# APP Frontend Service - NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: cf-blog-frontend-service
  namespace: cf-blog
spec:
  selector:
    app: cf-blog-frontend
  type: NodePort
  ports:
    - name: "http"
      port: 81
      targetPort: 81
      protocol: "TCP"
      nodePort: 30006
