cf-blog-k8s-cloud.yaml
# CF-Blog on Kubernetes

# NestJS Backend Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cf-blog-backend
  namespace: cf-blog
spec:
  replicas: 3
  selector:
    matchLabels:
      app: cf-blog-backend
  template:
    metadata:
      labels:
        app: cf-blog-backend
    spec:
      containers:
      - name: cf-blog-backend
        image: gsmx64/cf-blog-backend:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 82
        livenessProbe:
          httpGet:
            path: /api/settings/view
            port: 82
          initialDelaySeconds: 60
          timeoutSeconds: 5

---

# React Frontend Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cf-blog-frontend
  namespace: cf-blog
spec:
  replicas: 3
  selector:
    matchLabels:
      app: cf-blog-frontend
  template:
    metadata:
      labels:
        app: cf-blog-frontend
    spec:
      containers:
      - name: cf-blog-frontend
        image: gsmx64/cf-blog-frontend:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 81
        livenessProbe:
          httpGet:
            path: /
            port: 81
          initialDelaySeconds: 60
          timeoutSeconds: 5

---

# APP Backend Service
apiVersion: v1
kind: Service
metadata:
  name: cf-blog-backend-service
  namespace: cf-blog
spec:
  selector:
    app: cf-blog-backend
  type: LoadBalancer
  ports:
    - name: "http"
      port: 82
      targetPort: 82
      protocol: "TCP"

---

# APP Frontend Service
apiVersion: v1
kind: Service
metadata:
  name: cf-blog-frontend-service
  namespace: cf-blog
spec:
  selector:
    app: cf-blog-frontend
  type: LoadBalancer
  ports:
    - name: "http"
      port: 81
      targetPort: 81
      protocol: "TCP"

---

# APP Ingress Service
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cf-blog-ingress-service
  namespace: todo-list
  annotations:
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/http2-push-preload: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "500m"
    nginx.ingress.kubernetes.io/proxy-pass-headers: "Location"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - cf-blog.line.pm
      secretName: cf-blog-tls
  rules:
    - host: cf-blog.line.pm
      http:
        paths:
          - path: '/api'
            pathType: Prefix
            backend:
              service:
                name: cf-blog-backend-service
                port:
                  number: 80
		  - path: '/'
            pathType: Prefix
            backend:
              service:
                name: cf-blog-frontend-service
                port:
                  number: 80
